manifest/istio/api-gateway-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway
  namespace: default
spec:
  hosts:
    - "sikeat.me"
    - "www.sikeat.me"
  gateways:
    - main-gateway
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 301
    - retries:
        attempts: 3
        perTryTimeout: 5s
      timeout: 15s
      route:
        - destination:
            host: api-gateway
            port:
              number: 9090
