manifest/istio/mail-service-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mail-service
  namespace: default
spec:
  hosts:
    - mail-service
  http:
    - retries:
        attempts: 3
        perTryTimeout: 5s
      timeout: 15s
      route:
        - destination:
            host: mail-service
            port:
              number: 8081
