manifest/istio/my-app-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
  namespace: default
spec:
  hosts:
    - my-app
  http:
    - retries:
        attempts: 3
        perTryTimeout: 5s
      timeout: 15s
      route:
        - destination:
            host: my-app
            port:
              number: 8080
